--- a/web/static/css/home.css
+++ b/web/static/css/home.css
@@ -46,7 +46,7 @@
     padding: 2px 7px;
     border-radius: 4px;
     background: color-mix(in srgb, #14b8a6 16%, transparent);
-    color: #5eead4;
+    color: #0F766E;
     vertical-align: 1px;
     margin-right: 4px;
 }
